# lerobot-dataset-tools

./: README.md  pyproject.toml
data/: sample_dataset.jsonl
scripts/: dataset_cli.py
src/lerobot_dataset_tools/: __init__.py  cli.py  io.py  schema.py  stats.py  visualize.py
tests/: test_dataset_tools.py
